# CMakeCourse

./: .gitmodules
helloworld/: CMakeLists.txt  main.cc
project2/: CMakeLists.txt  Makefile
project2/app/: CMakeLists.txt  main.cpp
project2/docs/: Doxyfile
project2/src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
project2/tests/: CMakeLists.txt  main.cpp
